New tree horizontal style

--- a/PLATFORM/Design/index.html
+++ b/PLATFORM/Design/index.html
@@ -3618,6 +3618,44 @@
                                                                                     </div>
                                                                                 </div>
                                                                             </div>
+                                                                            <ul class="tree-node">
+                                                                                <li class="tree-item">
+                                                                                    <div class="tree-block">
+                                                                                        <div class="inner">
+                                                                                            <div class="tree-el __title">
+                                                                                                <i class="tree-ico fa fa-info-circle"></i>
+                                                                                                PaymentIn #PA04829
+                                                                                            </div>
+                                                                                            <div class="tree-el __date">
+                                                                                                <i class="tree-ico fa fa-calendar"></i>
+                                                                                                Feb 17, 2015
+                                                                                            </div>
+                                                                                            <div class="tree-el __price">
+                                                                                                <i class="tree-ico fa fa-money"></i>
+                                                                                                10 USD
+                                                                                            </div>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </li>
+                                                                                <li class="tree-item">
+                                                                                    <div class="tree-block">
+                                                                                        <div class="inner">
+                                                                                            <div class="tree-el __title">
+                                                                                                <i class="tree-ico fa fa-info-circle"></i>
+                                                                                                PaymentIn #PA04829
+                                                                                            </div>
+                                                                                            <div class="tree-el __date">
+                                                                                                <i class="tree-ico fa fa-calendar"></i>
+                                                                                                Feb 17, 2015
+                                                                                            </div>
+                                                                                            <div class="tree-el __price">
+                                                                                                <i class="tree-ico fa fa-money"></i>
+                                                                                                10 USD
+                                                                                            </div>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </li>
+                                                                            </ul>
                                                                         </li>
                                                                         <li class="tree-item">
                                                                             <div class="tree-block">
