Styles for ui-grid

--- a/PLATFORM/Design/index.html
+++ b/PLATFORM/Design/index.html
@@ -3747,17 +3747,7 @@
                                 <div class="blade-inner">
                                     <div class="inner-block">
                                         <div class="form" ng-controller="MainCtrl">
-                                            <div ui-grid="gridOptions2" ui-grid-pagination class="grid"></div>
-                                            <p>Current page: {{ gridApi2.pagination.getPage() }} of {{ gridApi2.pagination.getTotalPages() }}</p>
-                                            <button type="button" class="btn btn-success" ng-click="gridApi2.pagination.previousPage()">
-                                            previous page
-                                            </button>
-                                            <button type="button" class="btn btn-success" ng-click="gridApi2.pagination.nextPage()">
-                                            next page
-                                            </button>
-                                            <button type="button" class="btn btn-success" ng-click="gridApi2.pagination.seek(3)">
-                                            go to page 3
-                                            </button>
+                                            <div ui-grid="{ data: myData, enableRowHeaderSelection: false, multiSelect: false }" ui-grid-selection class="grid"></div>
                                         </div>
                                     </div>
                                 </div>
