--- a/PLATFORM/Design/index.html
+++ b/PLATFORM/Design/index.html
@@ -2988,6 +2988,7 @@
                                                 <a class="list-block">
                                                     <i class="list-ico fa fa-folder-open"></i>
                                                     <span class="list-name">Assets</span>
+                                                    <span class="list-descr">Very long description for assets</span>
                                                 </a>
                                                 <ul class="list __sub">
                                                     <li class="list-item">
@@ -2995,6 +2996,17 @@
                                                             <i class="list-ico fa fa-file-text"></i>
                                                             <span class="list-name">apple-touch-icon-114x114.png</span>
                                                         </a>
+                                                        <ul class="list __sub">
+                                                            <li class="list-item">
+                                                                <a class="list-block">
+                                                                    <span class="list-img">
+                                                                        <img src="http://fakeimg.pl/350x350/00CED1/FFF/">
+                                                                    </span>
+                                                                    <span class="list-name">Nice picture :)</span>
+                                                                    <span class="list-descr">Description</span>
+                                                                </a>
+                                                            </li>
+                                                        </ul>
                                                     </li>
                                                     <li class="list-item">
                                                         <a class="list-block">
