--- a/PLATFORM/Design/index.html
+++ b/PLATFORM/Design/index.html
@@ -16,16 +16,13 @@
         <link rel="stylesheet" href="css/cosmetic.css">
         <link rel="stylesheet" href="css/modules/order.css">
         <link rel="stylesheet" href="css/modules/dynamic-expression.css">
+        <link rel="stylesheet" href="css/demo-framework.css">
+        <link rel="stylesheet" href="css/advanced.css">
 
         <link rel="stylesheet" href="chosen/chosen.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-touch.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.js"></script>
-        <script src="ui-grid/ui-grid-unstable.min.js"></script>
-        <script src="http://ui-grid.info/docs/grunt-scripts/csv.js"></script>
-        <script src="http://ui-grid.info/docs/grunt-scripts/pdfmake.js"></script>
-        <script src="http://ui-grid.info/docs/grunt-scripts/vfs_fonts.js"></script>
+        <script src="js/angular-drag-and-drop-lists.js"></script>
         <script src="js/app.js"></script>
 
     </head>
@@ -3758,9 +3755,7 @@
                             <div class="blade-content __medium-wide">
                                 <div class="blade-inner">
                                     <div class="inner-block">
-                                        <div class="form" ng-controller="MainCtrl">
-                                            <div ui-grid="{ data: myData, enableRowHeaderSelection: false, multiSelect: false }" ui-grid-selection class="grid"></div>
-                                        </div>
+                                        
                                     </div>
                                 </div>
                             </div>
