--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/backup/store-import.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/backup/store-import.tpl.html
@@ -43,3 +43,8 @@
         </div>
     </div>
 </div>
+<div class="blade-static __bottom" ng-if="blade.notification.finished">
+    <button class="btn" ng-click="bladeClose();">
+        <span>Close</span>
+    </button>
+</div>
