--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-detail.tpl.html
@@ -10,9 +10,9 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label" for="">Display name</label>
-                    <div class="form-input __langs" ng-repeat="data in blade.origEntity.catalog.languages">
+                    <div class="form-input __langs" ng-repeat="data in blade.currentEntity.displayNames">
                         <span class="flag flag-{{data.languageCode.substr(3).toLowerCase()}}"></span>
-                        <input ng-model="nothing.to.bind" class="form-control" />
+                        <input ng-model="data.name" placeholder="Enter display name..." class="form-control" />
                     </div>
                 </div>
             </form>
