stores - 'select some languages' tip added to SEO blade
Former-commit-id: dd6eddfdd59aea47eaf33dd213676df487a70115

--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/seo-detail.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/seo-detail.tpl.html
@@ -2,7 +2,8 @@
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <form name="formScope" class="form" novalidate>
+            <p class="note" ng-if="!seoInfos.length">Store doesn't have any language set. Assign some languages first.</p>
+            <form name="formScope" class="form" novalidate ng-if="seoInfos.length">
                 <fieldset ng-init="setForm(formScope);">
                     <legend>
                         URL keyword
