--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/resolve-result.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/resolve-result.tpl.html
@@ -7,7 +7,7 @@
 				</fieldset>
 				<div class="form-group">
 					<div class="form-input">
-						<ui-codemirror required ng-model="blade.currentEntity.subject" ui-codemirror-opts="editorOptions"></ui-codemirror>
+						{{blade.notification.subject}}
 					</div>
 				</div>
 
@@ -16,7 +16,7 @@
 				</fieldset>
 				<div class="form-group">
 					<div class="form-input">
-						<ui-codemirror required ng-model="blade.currentEntity.body" ui-codemirror-opts="editorOptions"></ui-codemirror>
+						{{blade.notification.body}}
 					</div>
 				</div>
 			</form>
