catalog - Add TaxType property to product detail blade
Former-commit-id: 12ad75bfd93c0cb63c42157365c156ec230276dc

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/item-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/item-detail.tpl.html
@@ -72,6 +72,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="column">
+                            <div class="form-group">
+                                <label class="form-label">Tax type</label>
+                                <div class="form-input">
+                                    <input class="form-control" ng-model="blade.item.taxType" placeholder="Enter tax type" />
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group" ng-if="blade.item.productType==='Digital'">
@@ -120,6 +128,14 @@
                                         <span class="check"></span>
                                         <span class="name">Has user agreement</span>
                                     </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="form-group">
+                                <label class="form-label">Tax type</label>
+                                <div class="form-input">
+                                    <input class="form-control" ng-model="blade.item.taxType" placeholder="Enter tax type" />
                                 </div>
                             </div>
                         </div>
