platform - dedicated settings list refactored
Former-commit-id: 1d1a09d3b570e852117984e7f2912237c0690aa7

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settingGroup-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/settings/blades/settingGroup-list.tpl.html
@@ -4,21 +4,20 @@
         <div class="form-input __search">
             <input placeholder="Search keyword..." ng-model="blade.searchText">
         </div>
-        <p class="form-count">Count: <span class="count">{{filteredEntities.length}}</span></p>
     </div>
 </div>
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block clearfix">
             <ul class="list __items">
-                <li class="list-item" ng-repeat="data in blade.allSettings | filter:blade.searchText | orderBy: 'displayName' as filteredEntities track by data.name" ng-class="{'__selected': data.name === selectedNodeId}" ng-click='selectNode(data)' ng-if="blade.searchText">
-                    <i class="list-ico fa fa-wrench"></i>
-                    <span class="list-t">{{data.displayName}}</span>
-                    <span class="list-descr">{{data.name}}</span>
+                <li class="list-item" ng-repeat="data in blade.allSettings | filter:blade.searchText | orderBy: 'name' track by data.name" ng-class="{'__selected': data.groupName === selectedNodeId}" ng-click='selectNode(data)' ng-if="blade.searchText">
+                    <i class="list-ico fa" ng-class="data.valueType ? 'fa-wrench' : 'fa-gears'"></i>
+                    <span class="list-t">{{data.name}}</span>
+                    <span class="list-descr" ng-if="data.groupName">{{data.groupName}}</span>
                 </li>
-                <li class="list-item" ng-repeat="data in blade.currentEntities | orderBy: 'displayName' as filteredEntities track by data.displayName" ng-class="{'__selected': data.displayName === selectedNodeId}" ng-click='selectNode(data)' ng-if="!blade.searchText">
-                    <i class="list-ico fa fa-wrench"></i>
-                    <span class="name">{{data.displayName}}</span>
+                <li class="list-item" ng-repeat="data in blade.currentEntities | orderBy: 'name' track by data.groupName" ng-class="{'__selected': data.groupName === selectedNodeId}" ng-click='selectNode(data)' ng-if="!blade.searchText">
+                    <i class="list-ico fa fa-gears"></i>
+                    <span class="list-t">{{data.name}}</span>
                 </li>
             </ul>
         </div>
