Catalogs - Import save last mapping in local storage
Former-commit-id: 66ecf4ae30a8d2cfc2cf0062ec0769e5dc20c329

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/import/wizard/catalog-CSV-import-wizard-mapping-step.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/import/wizard/catalog-CSV-import-wizard-mapping-step.tpl.html
@@ -41,7 +41,7 @@
                                 </td>
                                 <td class="table-col __product-name">
                                     <div class="form-input">
-                                            <input ng-required="!mappingItem.csvColumnName && mappingItem.isRequired" ng-model="mappingItem.customValue" placeholder="Default value..." focus-on="">
+                                            <input ng-required="!mappingItem.csvColumnName && mappingItem.isRequired" ng-model="mappingItem.customValue" placeholder="Default value...">
                                     </div>
                                 </td>
                               </tr>
