--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
@@ -1,20 +1,20 @@
 ﻿<div class="blade-content __large-wide">
-	<div class="blade-inner" style="padding: 0">
+	<div class="blade-inner">
 		<div class="inner-block">
-			<form class="form" style="padding: 0" name="formScope">
-				<fieldset class="ng-scope">
-					<legend class="ng-binding">Subject of notification</legend>
+			<form class="form">
+				<fieldset>
+					<legend>Subject of notification</legend>
 				</fieldset>
-				<div class="form-group">
+				<div class="form-group" style="margin-top:-15px;">
 					<div class="form-input">
 						<ui-codemirror required ng-model="blade.currentEntity.subject" ui-codemirror-opts="editorOptions"></ui-codemirror>
 					</div>
 				</div>
 
-				<fieldset class="ng-scope">
-					<legend class="ng-binding">Body of notification</legend>
+				<fieldset style="margin-top:20px;">
+					<legend>Body of notification</legend>
 				</fieldset>
-				<div class="form-group">
+				<div class="form-group" style="margin-top:-15px;">
 					<div class="form-input">
 						<ui-codemirror required ng-model="blade.currentEntity.body" ui-codemirror-opts="editorOptions"></ui-codemirror>
 					</div>
