--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-list.tpl.html
@@ -3,7 +3,7 @@
 		<div class="inner-block">
 			<ul class="list __items">
 				<li class="list-item" ng-repeat="data in blade.currentEntities track by data.type" ng-class="{'__selected': data.type === selectedNodeId}" ng-click="blade.editTemplate(data)">
-					<i class="list-ico fa-book"></i>
+					<i class="list-ico fa fa-envelope" ng-class="data.icon"></i>
 					<span class="list-name">
 						{{data.type}}
 					</span>
