--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/resolve-result.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/resolve-result.tpl.html
@@ -1,22 +1,21 @@
 ﻿<div class="blade-content __large-wide">
-	<div class="blade-inner" style="padding: 0">
+	<div class="blade-inner">
 		<div class="inner-block">
-			<form class="form" style="padding: 0" name="formScope">
-				<fieldset class="ng-scope">
-					<legend class="ng-binding">Subject of notification</legend>
+			<form class="form">
+				<fieldset>
+					<legend>Subject of notification</legend>
 				</fieldset>
-				<div class="form-group">
+				<div class="form-group" style="margin-top:-15px;">
 					<div class="form-input">
 						{{blade.notification.subject}}
 					</div>
 				</div>
 
-				<fieldset class="ng-scope">
-					<legend class="ng-binding">Body of notification</legend>
+				<fieldset style="margin-top:20px;">
+					<legend>Body of notification</legend>
 				</fieldset>
-				<div class="form-group">
-					<div class="form-input">
-						{{blade.notification.body}}
+				<div class="form-group" style="margin-top:-15px;">
+					<div class="form-input" ng-bind-html="to_trusted(blade.notification.body)">
 					</div>
 				</div>
 			</form>
