Added confirmation dialog for Rebuild Index button.
Former-commit-id: 56d67bbfcf3df2181f1d754ed6e70bf577aad9f1

--- a/PLATFORM/Modules/Search/VirtoCommerce.SearchModule.Web/Scripts/blades/rebuildIndex.tpl.html
+++ b/PLATFORM/Modules/Search/VirtoCommerce.SearchModule.Web/Scripts/blades/rebuildIndex.tpl.html
@@ -1,9 +1,4 @@
-﻿<div class="blade-static __bottom __expanded">
-    <button class="btn" ng-click="submit()" ng-disabled="isRebuilding">
-        <span>Rebuild Index</span>
-    </button>
-</div>
-<div class="blade-content" ng-if="blade.currentEntity">
+﻿<div class="blade-content" ng-if="blade.currentEntity">
     <div class="blade-inner">
         <div class="inner-block">
             <div ng-if="blade.currentEntity">
