- UPD. Test connection widget updated.
Former-commit-id: 4a6f2194af9ccd65ede32b35fc9e592ba0bc5a9f

--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/Scripts/widgets/avataxWidget.tpl.html
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/Scripts/widgets/avataxWidget.tpl.html
@@ -1,5 +1,5 @@
-﻿<div class="gridster-cnt" ng-click="openBlade()">
+﻿<div class="gridster-cnt" ng-click="testConnection()" style="background: {{result}}">
     <div class="cnt-inner">
-        <a href="api%2ftax%2favatax%2fping" target="_blank" class="list-link text">Test connection with AvaTax API</a>
+        <div class="list-t">Test connection with AvaTax</div>
     </div>
 </div>
