pages names changes, loading files for pages changes
Former-commit-id: 4d505b8006f6938fcf2999e466987b339e7c69d0

--- a/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/pages/edit-page.tpl.html
+++ b/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/pages/edit-page.tpl.html
@@ -9,7 +9,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="column">
+			<div class="column" ng-if="!blade.isByteContent">
 				<div class="form-group">
 					<label class="form-label">Language</label>
 					<div class="form-input">
