--- a/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/pages/pages-list.tpl.html
+++ b/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/pages/pages-list.tpl.html
@@ -1,37 +1,4 @@
-﻿<!--<div class="blade-content __medium-wide">
-	<div class="blade-inner">
-		<div class="inner-block">
-			<div class="table-wrapper">
-				<table class="table">
-					<thead>
-						<tr>
-							<th class="table-col">Language</th>
-							<th class="table-col">Page name</th>
-							<th class="table-col">Modified</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr class="table-item" ng-repeat="data in blade.currentEntities" ng-class="{'__selected': data.name === selectedItem.name}" context-menu data-target="ipl_menu_{{data.name}}" ng-click='blade.openBlade(data)' >
-							<td class="table-col __date">
-								<span class="flag flag-{{blade.getFlag(data.language)}}"></span>
-								<span>{{data.language}}</span>
-							</td>
-							<td class="table-col">
-								{{data.name}}
-							</td>
-							<td class="table-col __datePage">
-								<span class="table-date" am-time-ago="data.modifiedDate"></span>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
-</div>-->
-
-
-<div class="blade-static __collapsed">
+﻿<div class="blade-static __collapsed">
 	<div class="breadcrumbs">
 		<ul class="menu __inline">
 			<foo ng-repeat="data in blade.steps">
