--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/resolve-result.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/resolve-result.tpl.html
@@ -3,7 +3,7 @@
 		<div class="inner-block">
 			<form class="form">
 				<fieldset>
-					<legend>Subject of notification</legend>
+					<legend>Subject</legend>
 				</fieldset>
 				<div class="form-group" style="margin-top:-15px;">
 					<div class="form-input">
@@ -12,7 +12,7 @@
 				</div>
 
 				<fieldset style="margin-top:20px;">
-					<legend>Body of notification</legend>
+					<legend>Body</legend>
 				</fieldset>
 				<div class="form-group" style="margin-top:-15px;">
 					<div class="form-input" ng-bind-html="to_trusted(blade.notification.body)">
