--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
@@ -2,8 +2,15 @@
 	<div class="blade-inner">
 		<div class="inner-block">
 			<form class="form">
+				<div class="note">
+					<p>This is list of notification parameters. You can paste this code and value of parameters will be inserted in your template:</p>
+					<br />
+					<p ng-repeat="data in blade.parametersForTemplate">
+						{{ data.key }} - {{ data.value }}
+					</p>
+				</div>
 				<fieldset>
-					<legend>Subject of notification</legend>
+					<legend>Subject</legend>
 				</fieldset>
 				<div class="form-group" style="margin-top:-15px;">
 					<div class="form-input">
@@ -12,7 +19,7 @@
 				</div>
 
 				<fieldset style="margin-top:20px;">
-					<legend>Body of notification</legend>
+					<legend>Body</legend>
 				</fieldset>
 				<div class="form-group" style="margin-top:-15px;">
 					<div class="form-input">
