--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/navigation/menu/mainMenu.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/navigation/menu/mainMenu.tpl.html
@@ -1,7 +1,7 @@
 ﻿<nav class="nav-bar">
     <ul class="menu bar">
         <li class="menu-item" ng-class="{'__selected': currentMenuItem === menuItem && showSubMenu}" ng-repeat="menuItem in menuItems | filter: {parent: null}" ng-click="selectMenuItem(menuItem)">
-            <a class="menu-link" ng-if="!menuItem.template" href="">
+            <a class="menu-link" ng-if="!menuItem.template" href="" va-permission="{{menuItem.permission}}">
                 <span class="menu-ico" ng-class="menuItem.icon"></span>
                 <span class="name">{{menuItem.title}}</span>
             </a>
