--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
@@ -19,6 +19,17 @@
                             <span data-ng-show="detailForm.code.$error.validator">Code can't contain $+;=%{}[]|\/@ ~#!^*&()?:'<>, characters</span>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label class="form-label">Tax Type <a href="" ng-click="openCoreSettingsManagement()"><i class="form-ico fa fa-pencil"></i></a></label>
+                        <div class="form-input">
+                            <ui-select ng-model="blade.currentEntity.taxType">
+                                <ui-select-match allow-clear="true" placeholder="Select...">{{$select.selected}}</ui-select-match>
+                                <ui-select-choices repeat="x in taxTypes | filter: $select.search">
+                                    <span ng-bind-html="x | highlight: $select.search"></span>
+                                </ui-select-choices>
+                            </ui-select>
+                        </div>
+                    </div>
                 </fieldset>
             </form>
 
