--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/Scripts/widgets/avataxWidget.tpl.html
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/Scripts/widgets/avataxWidget.tpl.html
@@ -1,5 +1,5 @@
-﻿<div class="gridster-cnt" ng-click="testConnection()" style="background: {{result}}">
+﻿<div class="gridster-cnt" ng-click="testConnection()" style="background: {{background}}">
     <div class="cnt-inner">
-        <div class="list-t">Test connection with AvaTax</div>
+        <div class="list-t" title="{{message}}">Test connection with AvaTax</div>
     </div>
 </div>
