--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/categories-items-list.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/categories-items-list.tpl.html
@@ -42,7 +42,7 @@
                             <td class="table-col __product-name" ng-click='selectItem($event, data)'>
                                 <i class="table-ico fa fa-link" ng-if="hasLinks(data)" title="This category is linked"></i>
                                 <div class="table-t">{{data.name}}</div>
-                                <span class="table-status" ng-class="{'__active': data.isActive}" ng-if="data.type==='category'">{{data.isActive?'Active':'Inactive'}}</span>
+                                <span class="table-status" ng-if="data.type==='category' && !data.isActive">Inactive</span>
                                 <div class="table-descr">{{data.productType}}</div>
 
                                 <ul class="menu __context" role="menu" id="cil_menu_{{data.id+blade.level}}">
