--- a/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/themes/add-theme.tpl.html
+++ b/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/themes/add-theme.tpl.html
@@ -13,6 +13,7 @@
 				<div class="form-group" ng-init="setForm(contextEntityDetailForm)">
 					<div class="form-input">
 						<input focus-on="" required class="form-control" ng-model="blade.name" placeholder="Enter theme name" />
+						<input required type="hidden" ng-model="blade.themeFileUrl" />
 					</div>
 				</div>
 
