--- a/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/themes/themes-list.tpl.html
+++ b/PLATFORM/Modules/CMS/VirtoCommerce.Content.Web/Scripts/blades/themes/themes-list.tpl.html
@@ -8,7 +8,12 @@
 					</span>
 				</li>
 			</ul>
-			<p class="text" ng-if="!blade.currentEntities.length">No Themes yet</p>
+			<div class="note" ng-if="blade.currentEntities.length <= 0">
+				No themes yet
+				<br />
+				<br />
+				<button class="btn" ng-click="blade.createDefaultTheme()">Add default theme</button>
+			</div>
 		</div>
 	</div>
 </div>
