--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-languages.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-languages.tpl.html
@@ -14,8 +14,8 @@
                         </ui-select>
                     </div>
                 </div>
-                <div class="sub-t" ng-if="!blade.data.virtual">Additional languages</div>
-                <div class="form-group" ng-if="!blade.data.virtual">
+                <div class="sub-t">Additional languages</div>
+                <div class="form-group">
                     <div class="form-input" data-role="input-control">
                         <ui-select multiple ng-model="blade.currentEntity.selectedValues">
                             <ui-select-match placeholder="Select...">{{$item}}</ui-select-match>
