Update Blade Constructor and Documentation
Former-commit-id: 19098ecdd3cd759ae25b7cb66a6d905f40f2d40f

--- a/PLATFORM/Design/documentation/index.html
+++ b/PLATFORM/Design/documentation/index.html
@@ -676,6 +676,9 @@
                         <h1 class="title" id="breadcrumbs">Breadcrumbs</h1>
                         <div class="example">
                             <div class="breadcrumbs">
+                                <a class="back">
+                                    <i class="back-ico fa fa-arrow-left"></i>
+                                </a>
                                 <ul class="menu __inline">
                                     <li class="menu-item">
                                         <a class="menu-link" href="#">Catalogs</a>
