--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/wizards/newStore/new-store-wizard.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/wizards/newStore/new-store-wizard.tpl.html
@@ -26,6 +26,28 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="form-label">Default language</label>
+                    <div class="form-input">
+                        <ui-select ng-model="blade.currentEntity.defaultLanguage" required>
+                            <ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
+                            <ui-select-choices repeat="x in languages | filter: $select.search">
+                                <span ng-bind-html="x | highlight: $select.search"></span>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Default currency</label>
+                    <div class="form-input">
+                        <ui-select ng-model="blade.currentEntity.defaultCurrency" required>
+                            <ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
+                            <ui-select-choices repeat="x in currencies | filter: $select.search">
+                                <span ng-bind-html="x | highlight: $select.search"></span>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="form-label">State</label>
                     <div class="form-input">
                         <ui-select ng-model="blade.currentEntity.storeState" required>
