--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/catalog-detail.tpl.html
@@ -10,7 +10,7 @@
                 </div>
             </form>
 
-            <va-widget-container group="catalogDetail" blade="blade" gridster-opts="{width: 396}"></va-widget-container>
+            <va-widget-container group="catalogDetail" blade="blade" gridster-opts="gridsterOpts"></va-widget-container>
         </div>
     </div>
 </div>
