--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/widgets/itemImageWidget.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/widgets/itemImageWidget.tpl.html
@@ -1,10 +1,10 @@
 ﻿<div class="gallery">
-    <div class="gridster-cnt" ng-click="openItemImageBlade()">
-        <div class="cnt-inner" ng-if="currentBlade.item.images.length == 0">
+    <div class="gridster-cnt" ng-click="openBlade()">
+        <div class="cnt-inner" ng-if="currentEntities.length == 0">
             <i class="gallery-ico fa fa-image"></i>
             <div class="gallery-descr">No images</div>
         </div>
-        <div class="gallery-img" ng-class="{'__main' : $first, '__solo' : currentBlade.item.images.length == 1 }" va-showbigimage="image.url" ng-repeat="image in currentBlade.item.images | limitTo : 11 track by image.id">
+        <div class="gallery-img" ng-class="{'__main' : $first, '__solo' : currentEntities.length == 1 }" va-showbigimage="image.url" ng-repeat="image in currentEntities | limitTo : 11 track by image.id">
             <img ng-src="{{image.url ? image.url : ''}}" />
         </div>
     </div>
