--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/newnotifications/blades/notifications-edit-template.tpl.html
@@ -1,8 +1,8 @@
 ﻿<div class="blade-content __large-wide">
 	<div class="blade-inner">
 		<div class="inner-block">
-			<form class="form">
-				<div class="note">
+			<form class="form" name="edit">
+				<div class="note" ng-init="setForm(edit)">
 					<p>This is list of notification parameters. You can paste this code and value of parameters will be inserted in your template:</p>
 					<br />
 					<table style="border-collapse: collapse;">
@@ -20,7 +20,35 @@
 						</tbody>
 					</table>
 				</div>
+
 				<fieldset>
+					<legend>Display name</legend>
+				</fieldset>
+				<div class="form-group" style="margin-top:-16px;">
+					<div class="form-input">
+						<input placeholder="Enter display name" required ng-model="blade.currentEntity.displayName" class="form-control" focus-on="" />
+					</div>
+				</div>
+
+				<fieldset style="margin-top:20px;" ng-if="!blade.isNew">
+					<legend>Language: <span class="flag flag-{{blade.getFlag(blade.currentEntity.language)}}"></span> {{ blade.currentEntity.language }}</legend>
+				</fieldset>
+				<fieldset style="margin-top:20px;" ng-if="blade.isNew">
+					<legend>Language</legend>
+				</fieldset>
+				<div class="form-group" ng-if="blade.isNew">
+					<div class="form-input">
+						<ui-select ng-model="blade.currentEntity.language">
+							<ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
+							<ui-select-choices repeat="x in blade.languages">
+								<span class="flag flag-{{blade.getFlag(x)}}"></span>
+								<span ng-bind-html="x"></span>
+							</ui-select-choices>
+						</ui-select>
+					</div>
+				</div>
+
+				<fieldset style="margin-top:20px;">
 					<legend>Subject</legend>
 				</fieldset>
 				<div class="form-group" style="margin-top:-15px;">
@@ -40,4 +68,10 @@
 			</form>
 		</div>
 	</div>
+</div>
+
+<div class="blade-static __bottom" ng-if="blade.isNew">
+	<button class="btn" ng-click="blade.updateTemplate()" ng-disabled="!blade.canSave()">
+		<span>Create</span>
+	</button>
 </div>
